skills - fixed scrollbar view

--- a/src/app/components/pages/portfolio/home/skills/Skills.scss
+++ b/src/app/components/pages/portfolio/home/skills/Skills.scss
@@ -10,6 +10,22 @@
         transition: $longTransition;
         overflow-y: auto;
 
+        &::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        &::-webkit-scrollbar,
+        &::-webkit-scrollbar-button:vertical:start:decrement,
+        &::-webkit-scrollbar-button:vertical:end:increment,
+        &::-webkit-scrollbar-button:horizontal:start:decrement,
+        &::-webkit-scrollbar-button:horizontal:end:increment,
+        &::-webkit-scrollbar-button:vertical:end:increment,
+        &::-webkit-scrollbar-button:vertical:start:decrement,
+        &::-webkit-scrollbar-button:horizontal:start:decrement,
+        &::-webkit-scrollbar-button:horizontal:end:increment {
+            background: transparent;
+        }
+
         &.open {
             max-height: 80vh;
         }
